[package]
name = "arch-diff"
version = "0.1.0"
authors = ["Sunahara Yuu <dev@sunaemon.dev>"]
edition = "2021"

[dependencies]
alpm = { version = "2.2.1", features = ["mtree"] }
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
clap_complete = "3.0.6"
console = "0.15.0"
dirs = "4.0.0"
env_logger = "0.9.0"
either = "1.6.1"
handlebars = "4.2.1"
hex = "0.4.3"
human_bytes = { version = "0.3.0", features = ["bibytes"] }
log = "0.4.14"
libarchive = "0.1.1"
libarchive3-sys = "0.1.2"
libc = "0.2.117"
procfs = "0.12.0"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
similar = { version = "2.1.0", features = ["text", "unicode", "inline"] }
sha2 = "0.10.1"
toml = "0.5"
walkdir = "2.3.2"
